k8s/home-assistant/home-assistant.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: home-assistant
  namespace: home-assistant
---
kind: Service
apiVersion: v1
metadata:
  name: home-assistant
  namespace: home-assistant
spec:
  type: ClusterIP
  selector:
    service: home-assistant
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 8123
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: home-assistant
  namespace: home-assistant
  labels:
    service: home-assistant
spec:
  replicas: 1
  selector:
    matchLabels:
      service: home-assistant
  template:
    metadata:
      labels:
        app: home-assistant
    spec:
      hostNetwork: true
      containers:
        - name: home-assistant
          image: ghcr.io/home-assistant/home-assistant:2023.1
          ports:
            - containerPort: 8123
          volumeMounts:
            - name: home-assistant-storage
              mountPath: /config
      volumes:
        - name: home-assistant-storage
          persistentVolumeClaim:
            claimName: home-assistant-config
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  labels:
    service: home-assistant
  name: home-assistant-ingress
  namespace: home-assistant
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
specc:
  ingressClassName: traefik
  rules:
    - host: home-assistant.wayl.one
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: home-assistant
                port:
                  number: 8123
  tls:
    - secretName: home-assistant-tls
      hosts:
        - home-assistant.wayl.one
